[package]
name = "chip_8"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.7"
gtk = "^0.8.1"
gio = "^0.8.1"
glib = "^0.9.3"
cairo-rs = "^0.8.1"
gdk = "^0.12.1"